[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/urbnist.jpg" type="Texture" id=2]
[ext_resource path="res://art/REGISTER_end.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Scripts/RegisterPanel.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Alata-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.317647, 0.317647, 0.317647, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0.317647, 0.317647, 0.317647, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 6 )

[node name="RegisterPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="MarginContainer"]
margin_right = 576.0
margin_bottom = 1024.0
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxRegister" type="VBoxContainer" parent="MarginContainer2"]
margin_right = 536.0
margin_bottom = 984.0
custom_constants/separation = 30
alignment = 1

[node name="Logo" type="TextureRect" parent="MarginContainer2/VBoxRegister"]
margin_top = 142.0
margin_right = 536.0
margin_bottom = 398.0
rect_min_size = Vector2( 256, 256 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Register_Title" type="Label" parent="MarginContainer2/VBoxRegister"]
margin_top = 428.0
margin_right = 536.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 1 )
text = "REGISTER"
align = 1

[node name="Register_Fields" type="VBoxContainer" parent="MarginContainer2/VBoxRegister"]
margin_top = 518.0
margin_right = 536.0
margin_bottom = 686.0
custom_constants/separation = 15

[node name="Username_Hbox" type="HBoxContainer" parent="MarginContainer2/VBoxRegister/Register_Fields"]
margin_right = 536.0
margin_bottom = 46.0
custom_constants/separation = 15
alignment = 1

[node name="UsernameLabel" type="Label" parent="MarginContainer2/VBoxRegister/Register_Fields/Username_Hbox"]
margin_left = 33.0
margin_right = 232.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "USERNAME:"
align = 1

[node name="Username" type="LineEdit" parent="MarginContainer2/VBoxRegister/Register_Fields/Username_Hbox"]
margin_left = 247.0
margin_right = 503.0
margin_bottom = 46.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = SubResource( 3 )

[node name="Password_Hbox" type="HBoxContainer" parent="MarginContainer2/VBoxRegister/Register_Fields"]
margin_top = 61.0
margin_right = 536.0
margin_bottom = 107.0
custom_constants/separation = 15
alignment = 1

[node name="PasswordLabel" type="Label" parent="MarginContainer2/VBoxRegister/Register_Fields/Password_Hbox"]
margin_left = 33.0
margin_right = 232.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "password:"
align = 1

[node name="Password" type="LineEdit" parent="MarginContainer2/VBoxRegister/Register_Fields/Password_Hbox"]
margin_left = 247.0
margin_right = 503.0
margin_bottom = 46.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = SubResource( 4 )
secret = true

[node name="ConfirmPass_Hbox" type="HBoxContainer" parent="MarginContainer2/VBoxRegister/Register_Fields"]
margin_top = 122.0
margin_right = 536.0
margin_bottom = 168.0
custom_constants/separation = 15
alignment = 1

[node name="ConfirmPassLabel" type="Label" parent="MarginContainer2/VBoxRegister/Register_Fields/ConfirmPass_Hbox"]
margin_left = 48.0
margin_right = 216.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "CONFIRM:"
align = 1

[node name="Confirm" type="LineEdit" parent="MarginContainer2/VBoxRegister/Register_Fields/ConfirmPass_Hbox"]
margin_left = 231.0
margin_right = 487.0
margin_bottom = 46.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = SubResource( 5 )
secret = true

[node name="RegisterButton" type="TextureButton" parent="MarginContainer2/VBoxRegister"]
margin_top = 716.0
margin_right = 536.0
margin_bottom = 780.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Notification" type="Label" parent="MarginContainer2/VBoxRegister"]
margin_top = 810.0
margin_right = 536.0
margin_bottom = 842.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
percent_visible = -0.333333

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="MarginContainer2/VBoxRegister/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
